Set links for now

--- a/templates/widget.html
+++ b/templates/widget.html
@@ -136,9 +136,9 @@
     </div>
 
     <p><span>The last train left on {{last_train_date}}.</span></p>
-    <a class="link" href="#" target="_top"></a>
+    <a class="link" href="https://www.coalaction.org.uk/2020/01/where-does-banks-coal-go" target="_top"></a>
     <span class="source">
-      Last updated {{last_updated}}, source: <a href="https://realtimetrains.co.uk" target="_top">realtimetrains.co.uk</a>
+      Last updated {{last_updated}}, source: <a href="https://realtimetrains.co.uk" target="_blank">realtimetrains.co.uk</a>
     </a>
   </div>
 </body>
